fix(math): Math.min/max violated the JLS for NaN and -0.0
Measured against HotSpot 25.0.3+9, same host, same class file:

                          HotSpot   CratonVM
  Math.min(1.0, NaN)      NaN       1.0
  Math.max(1.0, NaN)      NaN       1.0
  Math.min(-0.0, 0.0)     -0.0      +0.0
  Math.min(1.0f, NaNf)    NaN       1.0
  StrictMath.min(1.0,NaN) NaN       1.0
  Double.min(1.0, NaN)    NaN       1.0

while min(II)I and min(JJ)J were correct -- the pass/fail boundary is per
DESCRIPTOR, below the granularity any of this campaign's screens report.

Cause: the bodies used Rust's f64::min/f32::min, which are IEEE minNum --
they RETURN THE NON-NaN OPERAND -- and compared zeros with `<`, which cannot
see a sign. Java specifies the opposite on both counts.

Reach: register_math_natives is called for BOTH java/lang/Math and
java/lang/StrictMath, so four bodies were eight wrong triples; Float.min/max
inherit them with no registration of their own; and Double.min/max is a third
copy with its own body, also fixed here.

Why nothing caught it: the registrar opens with
set_category(NativeKind::Intrinsic), and Intrinsic is exempt from shadow
retirement AND is not the census's native-shadows-bytecode kind, so a
--jdk-only-report run of a program calling Math.min four times yields ZERO
java/lang/Math rows. The census cannot see this species at all.

The correct tree already existed in-tree as
phases_late::streams::p56_java_math_min, whose doc comment describes this
exact trap, with exactly one caller -- the positive half fixed, the twin left,
for the fourth time this campaign.

Found by a record-triage lane that ran the probe instead of reading the
record; verified independently here before applying.
cargo check -p cratonvm-native-builtins: clean.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>